This PR implements resilience gaps across three phases, transforming the LLM Council from a functional prototype into a production-grad
The original implementation had several structural gaps identified through analysis against LLM council research literature:

Sycophancy: All models received identical prompts, producing correlated outputs instead of genuine diversity of opinion.
Scoring naïveté: Simple arithmetic mean scoring gave equal weight to confident and uncertain reviewers.
Fragile parsing: JSON parsing failed on common LLM output patterns (markdown fences, trailing commas).
No retry: A single transient provider failure (HTTP 503) could cascade into quorum failure.
Debate convergence artifacts: The convergence detector defaulted to 70 for unparseable confidence, polluting KS statistics.

New Rigorous Protocol Pipeline
GENERATE → ANONYMIZE → REVIEW → SCORE → DEBATE → REVISE → REVIEW_POST_DEBATE → SCORE → SYNTHESIZE → VALIDATE → EXPORT
Previously: GENERATE → ANONYMIZE → REVIEW → SCORE → DEBATE → SCORE → SYNTHESIZE → VALIDATE → EXPORT

The two new stages (REVISE, REVIEW_POST_DEBATE) ensure that the second SCORE pass operates on genuinely updated evidence rather than re-scoring the same pre-debate reviews.

Sycophancy Detection Formula
sycophancyIndex = textSimilarity × (confidenceDelta / 100)
textSimilarity: Jaccard word overlap between consecutive debate contributions from the same model
confidenceDelta: How much confidence moved toward the group majority median (clamped ≥ 0)
High index = opinion changed without argument change = sycophancy signal